libhid ChangeLog
================

2007-12-31 Charles Lepple (clepple+libhid@ghz.cc)
  - Added some comments and default parameters to swig/hidwrap.py.

2007-05-03 Charles Lepple (clepple+libhid@ghz.cc)
  - Updated version number to distinguish SVN builds from 0.2.16 release.

2007-04-25 Charles Lepple (clepple+libhid@ghz.cc)
  - Preparation for the 0.2.16 release:
  - Added a number of files to the tarball [334], [336]
  - Updated documentation [331], [335], [337]
  - Fixed some autoconf macros [332], [333]

2007-04-01 Charles Lepple (clepple+libhid@ghz.cc)
  - Reworked a lot of the autoconf/automake code with regards to SWIG. This
    allows 'make distcheck' to build the Python bindings, and it improves
    detection of the paths for SWIG and Python.  SWIG is no longer necessary
    unless you want the Python bindings. [328]
  - A little bit of cleanup in swig/Makefile.am, and now 'make distcheck'
    finishes without any errors. [329]

2007-03-31 Charles Lepple (clepple+libhid@ghz.cc)
  - Moved CFLAGS into AM_CFLAGS in each directory's Makefile.am so that 'make
    distcheck' will work.
  - Temporarily removed ccache/distcc because they don't recognize when they
    are called via links. [320]
  - Updated copyright on some Makefile.am files.
  - Updated some properties on configure.ac

2007-03-30 Albert Lee (trisk+alioth@acm.jhu.edu)
  - Remove internal copy of usb_dev_handle so that libhid builds with Solaris'
    libusb. [319]

2007-02-28  Martin F. Krafft (libhid@pobox.madduck.net)
  - Remove limitation for non-zero product IDs. Thanks Shahrouz Zolfaghari.
  - Add additional docbook location.  [318]

2007-02-27  Andreas Klöckner (lists@informa.tiker.net)
  - Various SWIG patches, including a more Pythonic libhid wrapper, and
    support for hid_strerror(). [304-314]
  - Other build system fixes. [312], [315]

2006-09-28  Charles Lepple (clepple+libhid@ghz.cc)
  - Added hid_strerror() for decoding return codes. [301]
